--- a/easysql/easysql.csproj
+++ b/easysql/easysql.csproj
@@ -45,9 +45,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseDatabase.cs" />
+    <Compile Include="BaseDBHelper.cs" />
     <Compile Include="DatabaseFactory.cs" />
-    <Compile Include="MySqlDatabase.cs" />
+    <Compile Include="DBHelperFactory.cs" />
+    <Compile Include="dialect\Dialect.cs" />
+    <Compile Include="dialect\MySqlDialect.cs" />
+    <Compile Include="dialect\SqlServerDialect.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Restrain.cs" />
+    <Compile Include="SqlServerDatabase.cs" />
+    <Compile Include="SqlServerDBHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="dll\mysql.data.dll" />
